<resources>
    <string name="app_name">Byte Orbit Contacts</string>

    <string name="optional_text">Optional! You may add an image from your gallery or camera.</string>
    <string name="optional_import_data">You may import remote contact data</string>
    <string name="optional_update_text">You may update the contact data</string>

    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_import">Import</string>
    <string name="action_refresh">Refresh</string>


    <string name="title_activity_add_contact">Add New Contact</string>
    <string name="title_activity_contact_detail">Contact Details</string>

    <string name="add_contact_name_hint">Name</string>
    <string name="add_contact_email_hint">Email</string>
    <string name="add_contact_phone_hint">Phone</string>
    <string name="add_contact_color__hint">Color</string>

    <string name="button_image_select">Select From Gallery</string>
    <string name="button_image_capture">Capture Image</string>
    <string name="title_activity_update_contact_details">Update Details</string>
</resources>
